--- a/SPA0501/main.tex
+++ b/SPA0501/main.tex
@@ -61,19 +61,19 @@
 \begin{document}
 \thispagestyle{fancy}
 
-¡Hola!
+¡Hola!                                                                                                  
 
-Me llamo Edgar y tengo 22 años. Soy un chico delgado y 189 cm de altura. Yo tengo una barba negra y mi pelo es castaño. Soy de Noruega. Tengo dos hermanas menoras. Son 19 y 17 años. Son todavía viven con mis padres, pero yo salgo hace tres años para estudiar en la universidad en Trondheim. Mi familia todos viven allí. Mis abuelos y mis tíos y tías. Tenemos una gata negra llama Hufsa. Él es gordo y viejo y pasa la mayor parte de su día durmiendo en el sofá. Visito a mi familia cada verano y navidad y a veces durante la Pascua. A veces vienen a visitarme.
+Me llamo Edgar y tengo 22 años. Soy un chico delgado y 189 cm de altura. Yo tengo una barba negra y mi pelo es castaño. Soy de Noruega. Tengo dos hermanas menores. Son tienen 19 y 17 años. Todavía viven con mis padres, pero yo hace tres años me fui a vivir fuera para estudiar en la universidad en Trondheim. Mi familia todos viven allí. Mis abuelos, mis tíos y tías. Tenemos una gata negra que se llama Hufsa. Ella es gorda y vieja y pasa la mayor parte de su día durmiendo en el sofá. Visito a mi familia cada verano y navidad y a veces durante la Pascua. A veces vienen a visitarme.
 
-Trondheim es una buena ciudad, pero a veces echo de menos mi casa. En mi tiempo libre me voy de fiesta con mis amigos o ver la televisión. Otras actividades incluyen el trabajo en la sociedad estudiantil, que es muy divertido. También toco juegos, juegos de mesa y videojuegos. Estoy tomando una clase de español y es muy divertido. Adicionalmente estudio ordenadores y eso es lo que quiro trabajar en el futuro.                                                          
+Trondheim es una buena ciudad, pero a veces echo de menos mi casa. En mi tiempo libre me voy de fiesta con mis amigos o ver la televisión. Otras actividades incluyen el trabajo en la sociedad estudiantil, que es muy divertida. También me gustan los juegos de mesa y videojuegos. Estoy tomando una clase de español y es muy divertido. Adicionalmente estudio ordenadores informatica y eso es lo que quiro trabajar en el futuro. 
 
-\par
-
-Me gusta viajara nuevos países y experimentar su cultura. Tengo ganas de ir a Argentina. Yo nunca he estado en Suramérica, pero he estado en España. Esta semana me voy de vacaciones a Thailandia para una semana. Eso significa que tengo que hacer muchas tareas ahora antes me voy. Por suerte para mí, mis padres pagan por el viaje. 
-
-\par
+Me gusta viajar a nuevos países y experimentar su cultura. Tengo ganas de ir a Argentina. Yo nunca he estado en Suramérica, pero he estado en España. Esta semana me voy de vacaciones a Thailandia para por una semana. Eso significa que tengo que hacer muchas tareas ahora antes me voy de irme. Por suerte para mí, mis padres pagan el viaje. 
 
 Saludos,\\
 Edgar
+
+\par
+
+Rettet av Ottar Sandvik Aas.
 
 \end{document}
