--- a/TDT4171/3/main.tex
+++ b/TDT4171/3/main.tex
@@ -21,10 +21,6 @@
 \begin{document}
 \maketitle
 
-\begin{abstract}
-    \blindtext
-    
-\end{abstract}
 
 \section*{Introduction}
     In this exercise we were tasked with creating a decision support system for
@@ -104,7 +100,7 @@
     had three values to choose from, making it an 18x2 big probability table. A
     small piece of it can be seen in Table \ref{tab:prob}.
 
-    \begin{table}[ht!]
+    \begin{table}[ht]
         \centering
         \begin{tabular}{| c | c | c | c |}\hline
             Progress & \multicolumn{3}{|c|}{Started}\\ \hline
@@ -117,18 +113,112 @@
 
             No & 0.05 & 0.2 & 0.95\\ \hline
         \end{tabular}
-        \caption{Probability of finishing the exercise before deadline}
+        \caption{Probability of finishing the exercise before deadline.}
         \label{tab:prob}
     \end{table}
 
+    The next step was to assign utilities. I decided to use an additive utility
+    model becaused that seemed natural for this problem. My quality of life is
+    improved more by finishing the exercise than being well rested for example.
+    The value of each variable affecting my quality of life can be seen in
+    Table \ref{tab:utility}. 
+
+    \begin{table}[ht]
+        \centering
+        \begin{tabular}{| c | c |}\hline
+            Variable &  Utility\\\hline
+            Finish exercise & 9\\ \hline
+            Tired & -1\\ \hline
+            Made plans & 5\\ \hline
+            Money(Broke, Some, Rich) & -1, 4, 6\\\hline
+            Had a good time & 6\\\hline
+        \end{tabular}
+        \caption{How much the various variables affect my quality of life.}
+        \label{tab:utility}
+    \end{table}
+    
+    I decided that my utility function should be the change in my quality of
+    life. Meaning that it could be both negative and positive. My utility
+    function therefore adds the inverse value for the inverse variable. For
+    example, not finishing the exercise would add minus nine to the utility
+    function. This does not apply to the money variable, since it is not a
+    yes/no variable. With this, the best achievable quality of life is 27 and
+    the worst is -22.
+
+    \citeA[pp. 634]{artificial} suggests two more steps: verify and refine the
+    model and perform sensitivity analysis. These two steps were done in
+    parrallell with the previous steps. Whenever a variable got a value that
+    did not match with my perception of it, I went back and adjusted the
+    probabilities.
 
 
 
 \section*{Results}
-    \blindtext
+    After following all the steps, I ended up with the model seen in Figure
+    \ref{fig:genie}. I have entered evidence such as when the exercise is due
+    and how much of it I had done. I also had plans Saturday so I entered that
+    as well. The difference in staying home, doing exercise and going out are
+    not that big, with only a difference in 1.5 between them. Regardless of my
+    choice, my quality of life would improve,
+
+    \begin{figure}[ht]
+        \centering
+        \includegraphics[width=\linewidth]{genie.png}
+        \caption{The finished model in GeNIe.}
+        \label{fig:genie}
+    \end{figure}
+
+    To make sure my model was good, I tried out a few other scenarios. The
+    results can be seen in Table \ref{tab:tomorrow} and Table
+    \ref{tab:saturday}.
+
+    \begin{table}[ht]
+        \centering
+        \begin{tabular}{| c | c |}\hline
+            & Quality of life\\\hline
+            Went out & -0.4725\\\hline
+            Did exercise & 6.067\\\hline
+        \end{tabular}
+        \caption{If the exercise was due Saturday instead of next week.}
+        \label{tab:tomorrow}
+    \end{table}
+
+    If the exercise is due tomorrow, quality of life drops significantly
+    regardless of my choice, but drops much more if I go out. It also matters
+    very little whether the exercise is due next week or the week after, which
+    is as expected since I usually don't do exercises that are due more than a
+    week from now.
+
+    \begin{table}[ht]
+        \centering
+        \begin{tabular}{| c | c |}\hline
+            & Quality of life\\\hline
+            Went out & 17.38\\\hline
+            Did exercise & 12.59\\\hline
+        \end{tabular}
+        \caption{If I have no plans of going out on Saturday.}
+        \label{tab:saturday}
+    \end{table}
+
+    If I have no plans on going out on Saturday, going out on Friday increases
+    by about 4. This makes sense since I usually go out on at least Friday or
+    Saturday. There is also a slight increase in staying home if I have no plan
+    on Saturday. This points to that my model is not perfect, since ideally
+    this should stay the same, or go down slightly.
 
 \section*{Discussion}
-    \blindtext
+    Overall, the results from my model matches my expectations. My quality of
+    life increases regardless of my choice, since either I get to have fun or I
+    am one exercise closer to being done for this semester. Both of which
+    affects my life in a positive way. 
+
+    There were, however, some inconsistencies. If I did not have plans on
+    Saturday I expected the model to show a slight decrease in life quality if
+    I then chose to not go out on Friday. However, my model gave it a slight
+    increase. This is because, in my model, the quality of life is not
+    dependent on a \emph{did i go out this weekend} variable, which it should
+    have been.
+
 
 \bibliography{references}
 \bibliographystyle{apacite}
